# miniapp-chatbot-telegram-wallet

./: .gitignore  Dockerfile.backend_app  Dockerfile.ngrok  Dockerfile.solana_app  Dockerfile.telegram_app  Dockerfile.telegram_bot  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  redis.conf
backend_app/: Cargo.toml
backend_app/src/: db.rs  main.rs  routes.rs
backend_app/src/utils/: helpers.rs
migrations/: 20241030032654_alter_column_user_settings.sql
scripts/: backend_app  entrypoint.sh  ngrok  solana_app  telegram_bot
solana_app/: Cargo.toml
solana_app/src/: lib.rs  main.rs  server.rs
solana_app/src/client/: mod.rs  redis.rs  rpc.rs  websocket.rs
solana_app/src/handlers/: jupiter.rs  pump.rs  swap.rs  transfer.rs
solana_app/src/models/: copy_trade.rs  mod.rs  token.rs  transaction.rs
solana_app/src/modules/: instruction.rs  matis.rs  mod.rs  raydium.rs  swap.rs  transfer.rs
solana_app/src/turnkey/: bytes.rs  client.rs  errors.rs  mod.rs  models.rs
solana_app/src/utils/: helpers.rs
telegram_app/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
telegram_app/src/: App.tsx  index.css  vite-env.d.ts
telegram_app/src/components/ui/: SwapSheet.tsx  button.tsx  card.tsx  ethToken.tsx  ethTokenBalances.tsx  input.tsx  positions.tsx  sellPercentageModal.tsx  sheet.tsx  solToken.tsx  solTokenBalances.tsx  swap.tsx  token.tsx  tokenBalances.tsx  tokenPrice.tsx  tokensBalancesSwap.tsx
telegram_app/src/lib/: constants.ts  eth.ts  solana.ts  utils.ts
telegram_app/src/telegram/: telegram-api.ts  telegram.d.ts
telegram_bot/: Cargo.toml
telegram_bot/migrations/: 20241017194255_create_users_and_calls_tables.sql  20241019234145_alter_users_add_turnkey_info.sql  20241021172454_user_settings.sql  20241021194203_alter_user_settings.sql  20241021204421_alter_user_settings_add_last_sent_token.sql  20241023032214_alter_time_column_calls.sql  20241023214002_alter_user_settings_add_sell_swap_settings.sql  20241024184347_alter_user_settings_alter_column_sell_percentage.sql  20241028161329_alter_user_settings_add_column_gas.sql  20241028172921_alter_user_settings_add_column_antimev.sql  20241028193231_positions.sql  20241028200145_add_take_profits_and_stop_losses_usersettings.sql  20241029004349_add_entry_price_positions.sql  20241030181621_alter_table_positions_column_user_tg_id.sql  20241031175259_position_add_chat_id.sql  20241101130953_position_sol_entry.sql  20241101141351_alter_sol_entry.sql  20241101173003_ui_amount_position.sql  20241101200810_bribe_user_settings_jito_tip_amount.sql  20241104154714_position_completed.sql  20241104165833_user_settings_active_complete_positions.sql  20241105211919_referrals.sql  20241105211919_refferals.sql  20241106141848_alter_user_settings_add_withdraw_config.sql
telegram_bot/src/: commands.rs  db.rs  handlers.rs  lib.rs  main.rs
telegram_bot/src/utils/: helpers.rs
