[package]
name = "backend_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
futures-util = "0.3.30"
redis = "0.27.2"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
sqlite = "0.36.1"
surf = "2.3.2"
tide = "0.16.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
