[package]
name = "solana_app"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.209"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
chrono = "0.4.38"
thiserror = "1.0.63"
futures = "0.3.30"
solana-client = "2.0.8"
solana-sdk = "2.0.8"
solana-transaction-status = "2.0.8"
hex = "0.4.3"
bs58 = "0.5.1"
ed25519-dalek = "1.0.1"
futures-util = "0.3.30"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
p256 = "0.10.0"
base64-url = "2.0.2"
bincode = "1.3.3"
lazy_static = "1.4"
dotenv = "0.15.0"
base64 = "0.22.1"
spl-token = "6.0.0"
spl-associated-token-account = "5.0.1"
solana-program = "2.0.9"
byteorder = "1.5.0"
regex = "1.10.6"
redis = "0.27.2"
solana-account-decoder = "2.0.10"
anyhow = "1.0.89"
axum = "0.7.7"