[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros" ] }
regex = "1.11.0"
anyhow = "1.0.89"
serde_json = "1.0.128"
reqwest = { version = "0.12.8", features = ["json", "blocking"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
chrono = {version= "0.4.38" }
serde = "1.0.210"
axum = "0.6"
base64 = "0.22.0"
rand = "0.9.0-alpha.0"
base64-url = "2.0.2"
async-std = "1.13.0"